syntax = "proto3";

package musapi.grpc;

option java_multiple_files = true;
option java_package = "com.musapi.grpc";
option java_outer_classname = "CategoriaMusicalServiceProto";
option csharp_namespace = "Musapi.Grpc";

service CategoriaMusicalService {
  rpc RegistrarCategoriaMusical (CategoriaMusicalRequest) returns (CategoriaMusicalResponse);
  rpc ObtenerCategoriasMusicales (Empty) returns (CategoriaMusicalListResponse);
  rpc EditarCategoriaMusical (CategoriaMusicalEditRequest) returns (CategoriaMusicalResponse);
}

message CategoriaMusicalRequest {
  string nombre = 1;
  string descripcion = 2;
}

message CategoriaMusicalEditRequest {
  int32 idCategoriaMusical = 1;
  string nombre = 2;
  string descripcion = 3;
}

message CategoriaMusicalResponse {
  int32 idCategoriaMusical = 1;
  string nombre = 2;
  string descripcion = 3;
}

message CategoriaMusicalListResponse {
  repeated CategoriaMusicalResponse categorias = 1;
}

message Empty {}


